--- a/report/document.bib
+++ b/report/document.bib
@@ -1,7 +1,6 @@
-@article{wiki2016wiki,
+@article{wiki2016,
   title={Discrete cosine transform},
   author={WikiPedia},
   journal={WikiPedia, the Free Encyclopedia},
-  year={2016},
-  url={https://en.wikipedia.org/wiki/Discrete_cosine_transform}
+  year={2016}
 }
